--- a/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
+++ b/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
@@ -149,6 +149,12 @@
     background: rgb(100, 100, 100);
   }
 
+  &__TavernInvitation {
+    height: 20rem;
+    width: 25rem;
+    background-color: #fff;
+  }
+
   &__Footer {
     padding: 0.5rem 0.5rem 0.25rem;
     font-size: 0.8rem;
