--- a/front/src/sections/TheTavern/Tavern/ScreenShare/ScreenShare.module.scss
+++ b/front/src/sections/TheTavern/Tavern/ScreenShare/ScreenShare.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../assets/scss/variables';
+
 .ScreenContainer {
   position: relative;
   z-index: 5;
@@ -9,6 +11,11 @@
   max-width: 75rem;
   z-index: 10;
   position: relative;
+
+  @include lg {
+    max-width: calc(100% - 27rem);
+  }
+
 
   &__TavernExit {
     cursor: pointer;
