--- a/front/src/sections/TheTavern/UserAccount/Contact/Contact.module.scss
+++ b/front/src/sections/TheTavern/UserAccount/Contact/Contact.module.scss
@@ -10,11 +10,17 @@
   &_Title{
     color:#fff;
     font-weight : 500;
-    
-    background-color : #3A271D;
+    background-color: #3a271d;
     border-radius:5px;
     padding:0.5rem;
     
+
+  }
+
+  &_Image{
+    border-radius : 50%;
+    width : 20%;
+    max-width: 80px;
 
   }
 
@@ -22,15 +28,15 @@
     
     font-weight : bold;
     color:#1DFFD6;
-    overflow-x : auto;
+    
     max-width: 75%;
     &_Container{
-      background-color: #553719;
+      background-color: #3a271d;
       margin: 0.5rem 0.3rem;
-      border-radius:5px;
       padding: 0.6rem 0.3rem;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       
 
     }
@@ -41,6 +47,8 @@
     background-color: #D92626 ;
     border:none;
     color: #fff;
+    padding : 0.5rem;
+    border-radius : 5px;
 
   }
 }
