--- a/front/src/sections/TheTavern/Thread/Thread.module.scss
+++ b/front/src/sections/TheTavern/Thread/Thread.module.scss
@@ -17,6 +17,7 @@
 
     @include lg {
       display: block;
+      cursor: default;
       width: 100%;
       font-weight: 700;
       padding-bottom: $gutter/2;
@@ -34,6 +35,28 @@
 
       @include xl {
         font-size: 1.8em;
+      }
+
+      & span {
+        font-style: italic;
+        clip-path: polygon(0% 0%, 0% 98%, 100% 99%, 97% 77%, 99% 59%, 95% 32%, 100% 1%);
+        background-color: rgb(255, 217, 0);
+        box-shadow: 10px 5px 5px black;
+        border-radius: 2px;
+        font-weight: 200;
+        color: white;
+        font-size: 0.5em;
+        padding-left: 0.5rem;
+        padding-right: 2rem;
+        transition: 0.5s;
+        background-position: 0 0;
+        background-size: 300% auto;
+        background-image: linear-gradient(to right,  #b08510 0%,  #ffe992 51%,  #b08510 100%);
+        &:hover,
+        &:active
+        {
+          background-position: 90%;
+        }
       }
     }
   }
