--- a/front/src/sections/TheTavern/UserAccount/UserAccount.module.scss
+++ b/front/src/sections/TheTavern/UserAccount/UserAccount.module.scss
@@ -126,3 +126,9 @@
   width: 11rem;
 }
 
+.TitleContainer {
+  font-size: 0.9em;
+  font-style: italic;
+  cursor: pointer;
+  position: relative;
+}
