--- a/front/src/sections/TheTavern/UserAccount/AvatarsList/AvatarsList.module.scss
+++ b/front/src/sections/TheTavern/UserAccount/AvatarsList/AvatarsList.module.scss
@@ -9,36 +9,56 @@
   z-index: 5000;
   background-image: url('../../../../assets/images/img-noise.png');
   box-shadow: 10px 5px 5px black;
-  padding: 2rem;
+  padding: 1rem;
   min-height: 15rem;
   width: 90%;
-  height: 90%;
+  height: fit-content;
   border-radius: 5px;
   color: white;
   text-align: center;
   line-height: 1.2;
 
   @include md {
-    width: 50%;
-    height: 50%;
-    left: 58%;
+    left: 57%;
+    max-width: 45rem;
   }
+
+  &__Closebtn {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    width: 2.5rem;
+  }
+  
 }
 
 .AvatarLists {
-  @include flex(center, space-between, row wrap);
-  width: 50%;
+  @include flex(center, center, row wrap);
+
+  &__Container {
+    @include flex(center, center, row wrap);
+  }
+
+  &__Valider {
+    margin-top : 0.5rem;
+    border: none;
+    padding: 0.8rem;
+    border-radius: 5px;
+    font-weight: 400;
+    color: white;
+    background-color : #f2af0d;
+  }
+
 }
 
-.Header{
+.Header {
+  @include flex(center, center, row wrap);
+  font-size: 1em;
   width: 100%;
-  display:flex;
-  justify-content: space-between;
-  & div{
-    width: 2rem;
-  }
-  & p{
-    width: 70%;
-    margin-left: 15%;
+  margin-bottom: 1rem;
+
+  & p {
+    width: 75%;
+    margin: auto;
   }
 }
