--- a/front/src/sections/TheTavern/Tavern/ScreenShare/ScreenShare.module.scss
+++ b/front/src/sections/TheTavern/Tavern/ScreenShare/ScreenShare.module.scss
@@ -16,6 +16,15 @@
     max-width: calc(100% - 27rem);
   }
 
+  &__Logo {
+    position: absolute;
+    margin : 0.5rem 0 0 0.5rem;
+    width: 2rem;
+    @include md {
+      width: 4rem;
+    }
+  }
+
 
   &__TavernExit {
     cursor: pointer;
