--- a/front/src/sections/TheTavern/Thread/Search/Search.module.scss
+++ b/front/src/sections/TheTavern/Thread/Search/Search.module.scss
@@ -11,7 +11,7 @@
   @include xl {
     border-radius: 0 0 0.5rem 0.5rem;
     padding-bottom: 1.3rem;
-    border-top: solid #0b0501 5px;
+    border-top: solid #1A1412 5px;
   }
 }
 
