--- a/front/src/sections/TheTavern/UserAccount/Contact/Contact.module.scss
+++ b/front/src/sections/TheTavern/UserAccount/Contact/Contact.module.scss
@@ -1,7 +1,7 @@
 .Contact {
   background-color : #3A271D;
   border-radius:5px;
-  font-family:  'nunito sans', nunito;
+  font-family:  'nunito sans', 'sans serif';
   padding:0.3rem 0.5rem;
   overflow : auto;
   max-height: 53vh;
