--- a/front/src/sections/TheTavern/Tavern/Chat/Chat.module.scss
+++ b/front/src/sections/TheTavern/Tavern/Chat/Chat.module.scss
@@ -1,13 +1,15 @@
 @import '../../../../assets/scss/variables';
 
 .Chat {
+  font-family: 'Nunito Sans', sans-serif;
   margin: -($gutter/2) ($gutter/2) 0;
   font-size: 0.8rem;
   line-height: 1.4;
 
   @include lg {
     @include flex(stretch, center, column nowrap);
-    min-height: 100vh;
+    // min-height: 100vh;
+    height: 100%;
     max-width: 25rem;
     width: 100%;
   }
@@ -15,7 +17,7 @@
   &__Messages {
     border-left: solid 1px yellow;
     border-right: solid 1px yellow;
-    background-color: #55381a;
+    background-image: url('../../../../assets/images/img-noise.png');
     padding: ($gutter/2);
     overflow: auto;
     position: relative;
@@ -26,7 +28,7 @@
     }
 
     &__Message {
-      width: 90%;
+      width: 100%;
       margin: ($gutter/2) 0;
       &__Self {
         text-align: right;
@@ -39,8 +41,7 @@
         margin: ($gutter/4) 0;
       }
       &__Content {
-        padding: ($gutter/4);
-
+        padding: ($gutter/3);
 
         background-color: #0b0501;
         border-radius: 5px;
