--- a/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
+++ b/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
@@ -149,12 +149,6 @@
     background: rgb(100, 100, 100);
   }
 
-  &__TavernInvitation {
-    height: 20rem;
-    width: 25rem;
-    background-color: #fff;
-  }
-
   &__Footer {
     padding: 0.5rem 0.5rem 0.25rem;
     font-size: 0.8rem;
@@ -201,7 +195,7 @@
     position: absolute;
     right: -0.5rem;
     margin-top: -1.8rem;
-    border: solid #0b0501 4px;
+    border: solid #1A1412 4px;
   }
 }
 .Triangle {
@@ -234,12 +228,12 @@
   & > div:first-child {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    background-color: #0b0501;
+    background-color: #1A1412;
     padding: 0.5rem;
 
     @include md {
       background-image: url('../../../../assets/images/img-noise.png');
-      background-color: #3a271d;
+      background-color: #1A1412;
     }
   }
 }
@@ -250,7 +244,7 @@
   height: 10rem;
 
   @include md {
-    height: 15rem;
+    height: 8rem;
   }
 }
 
@@ -272,7 +266,7 @@
 
 .Gutter {
   border-radius: 0 0 5px 5px;
-  background-color: #0b0501;
+  background-color: #1A1412;
 
   @include md {
     background-image: url('../../../../assets/images/img-noise.png');
