--- a/front/src/sections/TheTavern/UserAccount/UserAccount.module.scss
+++ b/front/src/sections/TheTavern/UserAccount/UserAccount.module.scss
@@ -6,16 +6,21 @@
   margin: auto;
   padding:1rem;
   border-radius: 5px;
- 
 
   &__DeleteBtn {
+    position: relative;
     border :none;
+    font-size: 0.7em;
+    margin: 0.3rem;
     padding: 0.3rem;
     border-radius: 5px;
-    background-color: #D92626;
-    color: #fff;
+    background-color: rgb(40, 26, 9);
+    color: rgb(187, 187, 187);
 
-
+    @include md {
+    margin-top: -2rem;
+    margin-left: 0.5rem;
+    }
   }
 
   &__Description {
@@ -27,18 +32,29 @@
     font-family:  'nunito sans', nunito;
     font-weight: 500;
     margin: 0.3rem 0 0.5rem 0;
-    &_Btn{
+    
+    &__Bloc {
+      width: 100%;
+      height: 1rem;
+      border-radius: 0px 0px 5px 5px;
+      background-image: url('../../../assets/images/img-noise.png');
+      position: absolute;
+      bottom: -1.3rem;
+    }
+
+    &_Btn {
       background-color: white;
       position: absolute;
       border: none;
       bottom: 0;
       right: 0;
-      &__Feather{
+
+      &__Feather {
         width: 2rem;
       }
-      
     }
-    &_Editing{
+
+    &_Editing {
       background-color: #fff;
       position: relative;
       height:15vh;
@@ -48,12 +64,12 @@
       font-weight: 500;
       margin: 0.3rem 0 0.5rem 0;
       width:100%;
-      &_Form{
-        position: relative;
 
+      &_Form {
+        position: relative;
       }
       
-      &_Btn{
+      &_Btn {
         position: absolute;
         bottom: 0.7rem;
         right: 0;
@@ -61,36 +77,30 @@
         background-color:#1DFFD6;
         margin : 0 0.3rem 0.3rem 0;
         border-radius : 5px;
-        
-        
-
       }
-
     }
 
-    &_Text{
-      
+    &_Text {
       word-wrap: break-word;
       padding: 0.5rem;
       overflow-y: auto;
     }
-
   }
 
   &__Avatar {
     position: relative;
-    margin-top: -2rem;
-    margin-right: -2rem;
+    margin-top: -1rem;
+    margin-right: -1rem;
     top: 0;
     right: 0;
     width: 4rem;
     height: 4rem;
     border-radius: 50%;
-    border: 5px solid #0b0501;
+    border: 5px solid #1A1412;
 
     @include md {
-      margin-top: -2rem;
-      margin-right: -3rem;
+      margin-top: -1rem;
+      margin-right: -2.5rem;
       width: 6rem;
       height: 6rem;
     }
@@ -99,11 +109,12 @@
 
 .Username_Container {
   background-image: url('../../../assets/images/img-noise.png');
-  padding:1rem;
+  padding-left: 1;
+  padding-right: 1;
   border-radius: 5px 5px 0 0;
 }
 
-.Username{
+.Username {
   color: #fff200;
   font-family:  'nunito sans', 'sans serif';
   width : 100%;
@@ -119,11 +130,31 @@
   }
 }
 
+.ContactList {
+  width: 100%;
+
+  &__Bloc {
+    width: 100%;
+    height: 1rem;
+    border-radius: 0px 0px 5px 5px;
+    background-image: url('../../../assets/images/img-noise.png');
+    bottom: -7.3rem;
+  }
+}
+
 .ContactList_Title {
-  background-color: #3a271d;
+  @include flex (center,left, row nowrap);
+  background-image: url('../../../assets/images/img-noise.png');
+  margin-top: 1.8rem;
   border-radius: 5px 5px 0 0;
-  padding: 1rem;
-  width: 11rem;
+  padding: 0.5rem;
+  width: 100%;
+  color: #fff200;
+
+  &_Logo {
+    margin-right: 1rem;
+    width: 2rem;
+  }
 }
 
 .TitleContainer {
