--- a/front/src/sections/TheTavern/components/Nav/Nav.module.scss
+++ b/front/src/sections/TheTavern/components/Nav/Nav.module.scss
@@ -30,9 +30,10 @@
       height: 100vh;
       grid-area: none;
       width: 16rem;
-      background-image: url('../../../../assets/images/backgroundlight.jpg');
+      background-color: white;
+      background-image: url('../../../../assets/images/backgroundwhite5.jpg');
       background-repeat: no-repeat;
-      background-position: -18rem;
+      background-position: -7rem;
       background-size: cover;
       border-right: solid #dcaa84 0.5rem;
     }
