--- a/front/src/sections/TheTavern/components/Nav/NavLinks/NavLinks.module.scss
+++ b/front/src/sections/TheTavern/components/Nav/NavLinks/NavLinks.module.scss
@@ -5,14 +5,17 @@
   position: absolute;
   background-color: #5b3d20;
   border-radius: 5px;
+  font-weight: 400;
   top: 0.5rem;
   right: $gutter * 2.3;
   transform: translate(100%);
+  color:  white;
   // transition: all 750ms cubic-bezier(.75,-1.52,.04,1.95);
   // transition: all 750ms cubic-bezier(1,.14,.23,1.44);
   transition: all 750ms cubic-bezier(0.46, 0.59, 0.36, 1.27);
 
   @include lg {
+    color:  #5b3d20;
     transform: none;
     position: relative;
     transition: none;
@@ -54,7 +57,7 @@
 
       @include lg {
         position: absolute;
-        bottom: 0;
+        bottom: 7.5%;
         left: 50%;
         transform: translate(-50%);
       }
