fix one problem of link

--- a/front/src/components/Error/ErrorMessage.module.scss
+++ b/front/src/components/Error/ErrorMessage.module.scss
@@ -1,7 +1,6 @@
-.Container {
-    margin-left: -13.5rem;
-    margin-top: -0.6rem;
-    margin-bottom: 0.8rem;
+.ErrorMessage {
+    margin-top: -.6rem;
+    margin-bottom: 0.3rem;
     font-size: 0.9em;
     font-style: italic;
     font-weight: 400;
