--- a/front/src/sections/Auth/Signin/Signin.module.scss
+++ b/front/src/sections/Auth/Signin/Signin.module.scss
@@ -56,13 +56,19 @@
   max-width: 35rem;
   padding: $gutter;
   margin-top: $gutter + 1rem;
-
+  
+  &__Signup{
+    border: none;
+    background-color: transparent;
+    box-shadow: none;
+    text-decoration: underline;
+  }
   @include lg {
     width: 35%;
     position: absolute;
     right: 3rem;
   }
-
+  
   @include xl {
     position: absolute;
     max-width: 25rem;
@@ -106,7 +112,7 @@
 
   &__Btn {
     @include flex(center, center, row nowrap);
-    margin-top: ($gutter/5);
+    margin-top: ($gutter/2);
     font-family: 'nunito sans', sans-serif;
     border: none;
     border-radius: 5px;
@@ -134,12 +140,17 @@
     }
 
     &__Container {
-      @include flex(center, space-between, row wrap);
+      @include flex(center, space-around, row wrap);
       width: 100%;
     }
-
   }
-  &__Signup {
+}
+
+.Password{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  &__Forgotten {
     border: none;
     background-color: transparent;
     box-shadow: none;
