--- a/front/src/sections/TheTavern/Tavern/Chat/Chat.module.scss
+++ b/front/src/sections/TheTavern/Tavern/Chat/Chat.module.scss
@@ -8,15 +8,15 @@
 
   @include lg {
     @include flex(stretch, center, column nowrap);
-    // min-height: 100vh;
+    max-height: 100vh;
     height: 100%;
     max-width: 25rem;
     width: 100%;
   }
 
   &__Messages {
-    border-left: solid 1px yellow;
-    border-right: solid 1px yellow;
+    border-right: solid 1px #8a8300;
+    border-left: solid 1px #8a8300;
     background-image: url('../../../../assets/images/img-noise.png');
     padding: ($gutter/2);
     overflow: auto;
@@ -30,9 +30,10 @@
     &__Message {
       width: 100%;
       margin: ($gutter/2) 0;
+      word-wrap: break-word;
       &__Self {
         text-align: right;
-        color: yellow;
+        color: #fff200;
         margin: ($gutter/4) 0;
       }
       &__Player {
@@ -54,28 +55,31 @@
   &__Message {
     &__Form {
       @include flex(center, space-between, row wrap);
-      position: relative;
-
+      //position: relative;
+      word-wrap: break-word;
       &__Btn {
+        margin-right: 1rem;
         position: absolute;
         border: none;
-
-
         border-radius: 5px;
-
         right: 0.5rem;
         padding: ($gutter/3);
         color: #fff;
         background-color: #f3cc0d;
+        
       }
+
+
     }
 
     &__Input {
-      padding: ($gutter/2);
+      padding: ($gutter/4);
       width: 100%;
+      
 
       @include lg {
         min-height: 6rem;
-      }    }
+      }   
+    }
   }
 }
