--- a/front/src/sections/TheTavern/Tavern/Tavern.module.scss
+++ b/front/src/sections/TheTavern/Tavern/Tavern.module.scss
@@ -6,6 +6,21 @@
   background-color:#0b0501;
   background: url('../../../assets/images/wood3.jpg');
 
+
+  &__Avatar {
+    width: 3rem;
+    border-radius: 50%;
+    border: 2px solid #fff200;
+    z-index: 400;
+    @include md {
+      width: 4rem;
+      position : absolute ;
+      top : 4rem;
+      right : 27rem;  
+  }
+
+  }
+
   &__Chat {
     &__Container {
       @include lg {
