--- a/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
+++ b/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
@@ -17,18 +17,15 @@
   @include md {
     margin-top: 1.8rem;
     top: 0;
-    position: relative;
+    position: sticky;
     transform: none;
     background-color: initial;
-    width: 40%;
+    width: calc(100% - 50%);
+    max-width: 75rem;
   }
 
   @include lg {
-    margin-left: 2.5rem;
-  }
-
-  @include xl {
-    width: 35%;
+    margin-left: $gutter/2;
   }
 
   &__Open {
@@ -47,70 +44,84 @@
     }
   }
 
-  &__DemandeTavern {
-    display: none;
-    @include md {
-      display: block;
-      background-image: url('../../../../assets/images/img-noise.png');
+  &__TavernInvitation {
+    margin: ($gutter * 2) 0 $gutter;
+    background: url('../../../../assets/images/img-noise.png');
+    width: 100%;
+    padding: 1rem;
+    border-radius: 5px;
+    position: relative;
+    z-index: 10;
+
+    &:before {
+      content: '';
+      background: url('../../../../assets/images/img-noise.png');
+      position: absolute;
+      overflow: hidden;
+      border-bottom: 1px solid #000;
+      top: -2rem;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 10rem;
+      height: 2rem;
       border-radius: 5px 5px 0 0;
-      width: 13rem;
-      padding: 0.5rem;
-      margin-left: 0.6rem;
-      margin-top: 3rem;
-      margin-bottom: -3rem;
-      color: #fff200;
+      background-color: #fff;
+      z-index: -1;
+    }
+
+    &:after {
+      content: '';
+      background: url('../../../../assets/images/Avatardefault.png');
+      background-size: cover;
+      height: 5rem;
+      width: 5rem;
+      border-radius: 50%;
+      border: 4px solid #1a1412;
+      position: absolute;
+      top: -3rem;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    &__Container {
+      border: 1px solid #f2af0d;
+      border-radius: 5px;
+      overflow: hidden;
+      background: url('../../../../assets/images/backgroundTavernAsk.png');
+      background-color: #1a1412;
+      background-size: cover;
+      background-position: 0 -4rem;
+      height: 9.5rem;
+      scroll-behavior: smooth;
+      scrollbar-width: thin;
+      scrollbar-color: rgb(80, 63, 18) rgb(48, 31, 10);
+
+      &::-webkit-scrollbar {
+        -webkit-appearance: none;
+        width: 10px;
+        height: 10px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background: rgb(26, 17, 6);
+        border-radius: 0px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        cursor: pointer;
+        border-radius: 5px;
+        background: rgb(83, 187, 180);
+      }
+
+      &::-webkit-scrollbar-thumb:window-inactive {
+        background-color: rgba(0, 0, 0, 0.25);
+      }
+
+      &::-webkit-scrollbar-thumb:hover {
+        background: rgb(87, 235, 220);
+      }
     }
   }
-  &__DemandeTavernBlock {
-    display: none;
-    @include md {
-      padding: 0.5rem;
-      display: block;
-      margin-left: 0.6rem;
-      width: 33rem;
-      background-color: rgb(79, 66, 66);
-    }
-  }
-
-  // &__Demande {
-  //   display: none;
-
-  //   @include md {
-  //     position: relative;
-  //     display: block;
-  //     background-image: url('../../../../assets/images/img-noise.png');
-  //     border-radius: 5px 5px 0 0;
-  //     width: 11rem;
-  //     padding: 0.5rem;
-  //     // margin-left: 0.6rem;
-  //     // margin-top: 3rem;
-  //     // margin-bottom: -3rem;
-  //     color: #fff200;
-  //   }
-
-  //   &__Number {
-  //     display: none;
-
-  //     @include md {
-  //       position: absolute;
-  //       top: -0.5rem;
-  //       right: -0.5rem;
-  //       // margin-top: 0.3rem;
-  //       // margin-left: 10.5rem;
-  //       // display: block;
-  //       // padding: 0.15rem;
-  //       // padding-top: 0.3rem;
-  //       @include flex(center, center, row wrap);
-  //       font-size: 0.8em;
-  //       font-weight: 400;
-  //       background-color: red;
-  //       color: #fff;
-  //       border-radius: 50%;
-  //       width: 1.4rem;
-  //       height: 1.4rem;
-  //     }
-  //   }
-  // }
 
   &__Invitation {
     overflow: auto;
@@ -181,7 +192,6 @@
   width: 2rem;
   margin: 0.3rem;
   border-radius: 50%;
-
 }
 
 .SelfAvatarInput {
@@ -195,9 +205,10 @@
     position: absolute;
     right: -0.5rem;
     margin-top: -1.8rem;
-    border: solid #1A1412 4px;
+    border: solid #1a1412 4px;
   }
 }
+
 .Triangle {
   margin: 0 2rem;
   border-right: 0.7rem solid transparent;
@@ -228,17 +239,18 @@
   & > div:first-child {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    background-color: #1A1412;
+    background-color: #1a1412;
     padding: 0.5rem;
 
     @include md {
       background-image: url('../../../../assets/images/img-noise.png');
-      background-color: #1A1412;
+      background-color: #1a1412;
     }
   }
 }
 
 .Input {
+  resize: vertical;
   width: 100%;
   padding: 1rem;
   height: 10rem;
@@ -266,7 +278,7 @@
 
 .Gutter {
   border-radius: 0 0 5px 5px;
-  background-color: #1A1412;
+  background-color: #1a1412;
 
   @include md {
     background-image: url('../../../../assets/images/img-noise.png');
