--- a/front/src/sections/TheTavern/components/Nav/Nav.module.scss
+++ b/front/src/sections/TheTavern/components/Nav/Nav.module.scss
@@ -31,11 +31,11 @@
       grid-area: none;
       width: 16rem;
       background-color: white;
-      background-image: url('../../../../assets/images/background8.jpg');
+      background-image: url('../../../../assets/images/background9.png');
       background-repeat: no-repeat;
-      background-position: -10rem;
+      background-position: -24rem;
       background-size: cover;
-      border-right: solid #dcaa84 0.5rem;
+
     }
 
     &__Welcome {
