--- a/front/src/sections/TheTavern/UserAccount/Contact/Contact.module.scss
+++ b/front/src/sections/TheTavern/UserAccount/Contact/Contact.module.scss
@@ -1,3 +1,4 @@
+@import '../../../../assets/scss/variables';
 .Contact {
   background-color : #3A271D;
   border-radius:5px;
@@ -9,10 +10,43 @@
   
 
   &_Title{
-    color:#fff;
-    font-weight : 500;
-    border-radius:5px;
-    padding:0.5rem;
+    font-style: italic;
+    clip-path: polygon(0% 0%, 0% 98%, 100% 99%, 97% 77%, 99% 59%, 95% 32%, 100% 1%);
+    background-color: rgb(255, 217, 0);
+    box-shadow: 10px 5px 5px black;
+    border-radius: 2px;
+    font-weight: 200;
+    color: white;
+    font-size: 0.8em;
+    padding:0.3rem;
+    padding-right: 0.5rem;
+    transition: 0.5s;
+    background-position: 0 0;
+    background-size: 300% auto;
+    background-image: linear-gradient(to right,  #b08510 0%,  #ffe992 51%,  #b08510 100%);
+
+    @include md {
+      font-style: italic;
+      clip-path: polygon(0% 0%, 0% 98%, 100% 99%, 97% 77%, 99% 59%, 95% 32%, 100% 1%);
+      background-color: rgb(255, 217, 0);
+      box-shadow: 10px 5px 5px black;
+      border-radius: 2px;
+      font-weight: 200;
+      color: white;
+      font-size: 1em;
+      padding:0.3rem;
+      padding-right: 1rem;
+      transition: 0.5s;
+      background-position: 0 0;
+      background-size: 300% auto;
+      background-image: linear-gradient(to right,  #b08510 0%,  #ffe992 51%,  #b08510 100%);
+      &:hover,
+      &:active
+      {
+        background-position: 90%;
+      }
+    }
+
   }
 
   &_Image{
@@ -24,11 +58,14 @@
 
   &_Content{
     font-weight : bold;
-    color:#1DFFD6;
+    color:rgb(32, 199, 169);
     max-width: 75%;
 
     &_Container{
       background-color: #3a271d;
+      background-image: url('../../../../assets/images/backgroundTavernAsk.png');
+      background-size: 100%;
+      background-position: center;
       margin: 0.5rem 0;
       padding: 0.6rem 0.3rem;
       display: flex;
@@ -38,10 +75,18 @@
   }
 
   &_Btn{
-    background-color: #D92626 ;
-    border:none;
+    font-family: 'Fredoka One', cursive;
+    margin-top: -4rem;
+    margin-right: -0.5rem;
+    font-size: 1.3rem;
+    background-color: rgb(227, 35, 35) ;
+    border-radius: 50%;
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
+    border:3px solid #19130F;
     color: #fff;
-    padding : 0.5rem;
-    border-radius : 5px;
+    @include md {
+
+    }
   }
 }
