--- a/front/src/sections/TheTavern/components/Nav/NavLinks/NavLinks.module.scss
+++ b/front/src/sections/TheTavern/components/Nav/NavLinks/NavLinks.module.scss
@@ -15,7 +15,7 @@
   transition: all 750ms cubic-bezier(0.46, 0.59, 0.36, 1.27);
 
   @include lg {
-    color:  #5b3d20;
+    color:  white;
     transform: none;
     position: relative;
     transition: none;
