--- a/front/src/sections/TheTavern/components/Nav/NavLinks/NavLinks.module.scss
+++ b/front/src/sections/TheTavern/components/Nav/NavLinks/NavLinks.module.scss
@@ -43,7 +43,7 @@
 
   li {
     padding: $gutter/2 $gutter/3;
-    border-right: solid 2.5px #000;
+    border-right: solid 2.5px #18120E;
 
     @include lg {
       padding: $gutter/3.5;
