--- a/front/src/sections/TheTavern/Tavern/Chat/Chat.module.scss
+++ b/front/src/sections/TheTavern/Tavern/Chat/Chat.module.scss
@@ -2,12 +2,13 @@
 
 .Chat {
   font-family: 'Nunito Sans', sans-serif;
-  margin: -($gutter/2) ($gutter/2) 0;
+  margin: -($gutter/4) ($gutter/4) 0;
   font-size: 0.8rem;
   line-height: 1.4;
 
-  @include lg {
+  @include md {
     @include flex(stretch, center, column nowrap);
+    margin: -($gutter/2) ($gutter/2) 0;
     max-height: 100vh;
     height: 100%;
     max-width: 25rem;
@@ -75,9 +76,10 @@
     &__Input {
       padding: ($gutter/4);
       width: 100%;
-      
+      height: 17vh;
 
       @include lg {
+        height: 10vh;
         min-height: 6rem;
       }   
     }
