--- a/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
+++ b/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
@@ -6,8 +6,7 @@
   left: 0;
   right: 0;
   margin-top: 1.1rem;
-  top: 15vh;
-  background-color: #553719;
+  background-color: #211609;
   transform: translate(0, calc(100% - 42px));
   border-radius: 5% 5% 0 0;
   z-index: 50;
@@ -49,13 +48,17 @@
   }
 
   &__TavernInvitation {
-    margin: ($gutter * 2) 0 $gutter;
+    margin: ($gutter +1 ) 0 1rem;
     background: url('../../../../assets/images/img-noise.png');
     width: 100%;
     padding: 1rem;
     border-radius: 5px;
     position: relative;
     z-index: 10;
+
+    @include md {
+      margin: ($gutter * 2) 0 $gutter;
+    }
 
     &:before {
       content: '';
@@ -71,6 +74,7 @@
       border-radius: 5px 5px 0 0;
       background-color: #fff;
       z-index: -1;
+
     }
 
     &:after {
@@ -130,14 +134,16 @@
   &__Invitation {
     overflow: auto;
     height: 45%;
+    margin-top: 0.3rem;
+    max-height:7.9rem;
+    scroll-behavior: smooth;
+    scrollbar-width: thin;
+    scrollbar-color: rgb(87, 51, 20) rgb(19, 1, 1);
 
     @include md {
       max-height: 8.5rem;
       height: fit-content;
-      margin-top: 0.3rem;
-      scroll-behavior: smooth;
-      scrollbar-width: thin;
-      scrollbar-color: #888 #ccc;
+      margin-top: 0rem;
     }
   }
 
@@ -180,7 +186,7 @@
   top: 0;
   left: 0;
   right: 0;
-  background-color: #573819;
+  background-color: #211609;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -228,7 +234,7 @@
 }
 
 .Form {
-  background-color: #573819;
+  background-color: #211609;
   text-align: end;
   margin-top: 42px;
   // padding: 0 1rem;
@@ -243,11 +249,10 @@
   & > div:first-child {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    background-color: #1a1412;
+    background: url('../../../../assets/images/img-noise.png');
     padding: 0.5rem;
 
     @include md {
-      background-image: url('../../../../assets/images/img-noise.png');
       background-color: #1a1412;
     }
   }
@@ -282,10 +287,9 @@
 
 .Gutter {
   border-radius: 0 0 5px 5px;
-  background-color: #1a1412;
+  background: url('../../../../assets/images/img-noise.png');
 
   @include md {
-    background-image: url('../../../../assets/images/img-noise.png');
     background-color: #3a271d;
   }
   height: 0.5rem;
