--- a/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
+++ b/front/src/sections/TheTavern/Thread/Posts/Post/Post.module.scss
@@ -67,9 +67,9 @@
 .AuthorAvatar {
   background-color: #fff;
   border-radius: 50%;
-  border: solid 4px #1A1412;
-  width: 2.4rem;
-  background-color: #1A1412;
+  border: solid 4px #18120E;
+  width: 2.5rem;
+  background-color: #18120E;
 
   @include md {
     width: 3.5rem;
@@ -89,12 +89,15 @@
 .AuthorPost {
   color: #fff;
   text-align: right;
-  margin-right: 1rem;
+  margin-right: 1.5rem;
   font-family: 'nunito sans', nunito;
   font-weight: 400;
   padding: 0.3rem 1rem 0.3rem 0.3rem;
 
   @include md {
+    margin-right: 2.5rem;
+  }
+  @include xl {
     margin-right: 2rem;
   }
 
@@ -103,9 +106,12 @@
     text-align: right;
     font-family: 'nunito sans', nunito;
     font-weight: 400;
-    margin-right: 1rem;
+    margin-right: 1.5rem;
     padding: 0.3rem 1rem 0.3rem 0.3rem;
     @include md {
+      margin-right: 2.5rem;
+    }
+    @include xl {
       margin-right: 2rem;
     }
   }
