--- a/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
+++ b/front/src/sections/TheTavern/Thread/PostForm/PostForm.module.scss
@@ -65,7 +65,7 @@
       background: url('../../../../assets/images/img-noise.png');
       position: absolute;
       overflow: hidden;
-      border-bottom: 1px solid #000;
+      border-bottom: 3px solid #1a1412;
       top: -2rem;
       left: 50%;
       transform: translateX(-50%);
